system/mackerel-operator/resources/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: controller-egress
  namespace: mackerel-operator
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: mackerel-operator
      k8s:app.kubernetes.io/instance: mackerel-operator
  enableDefaultDeny:
    ingress: false
    egress: false
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: '*'
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toFQDNs:
        - matchName: api.mackerelio.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
